After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771155 - Main window goes insensitive if builder fails to open a listed project
Main window goes insensitive if builder fails to open a listed project
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
3.21.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-10 05:33 UTC by Mohammed Sadiq
Modified: 2016-12-26 17:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
make main window sensitive when failed in opening a project (1.36 KB, patch)
2016-12-24 06:44 UTC, Anoop Chandu
none Details | Review
greeter : Make greeter sensitive after an error (1.87 KB, patch)
2016-12-25 14:43 UTC, Anoop Chandu
committed Details | Review

Description Mohammed Sadiq 2016-09-10 05:33:48 UTC
How to reproduce:

1. Create some project for test.
2. Close builder after project creation, and reopen builder.
3. The test project created is listed in the 'Recent projects'. Delete the 'configure.ac' file from the project (without closing builder).
4. Now try to open the project.

builder fails to open the project, which is OK. But after that the main window goes insensitive which shouldn't happen.
Comment 1 Anoop Chandu 2016-12-24 06:44:22 UTC
Created attachment 342444 [details] [review]
make main window sensitive when failed in opening a project

Main window is made insensitive before opening a project. This patch makes main window sensitive again when there is an error in opening project.
Comment 2 sébastien lafargue 2016-12-24 11:36:27 UTC
Hi, i get:

WARNING: Error when getting information for file “/home/slaf/Projects/test/configure.ac”: No such file or directory

But the main window stays sensitive, maybe it's already fixed in master.

try and tell me, thanks
Comment 3 Anoop Chandu 2016-12-24 15:18:30 UTC
I build master now. After clicking, on close of error dialog, window remains insensitive.

https://drive.google.com/file/d/0BzuWMluhCkpBQUdrYXBwNVRsa2M/view?usp=sharing
Comment 4 sébastien lafargue 2016-12-24 16:26:52 UTC
ok, got it. At first i was trying to create a new project with Builder and by selecting "version control", telling it to use git, the result was a warning in the terminal.

By not selecting git, we get (and we are not consistent here) a warning dialog and i can reproduce the problem.
Comment 5 sébastien lafargue 2016-12-24 16:44:46 UTC
Review of attachment 342444 [details] [review]:

::: libide/greeter/ide-greeter-perspective.c
@@ +453,3 @@
+          gtk_widget_set_sensitive (GTK_WIDGET (IDE_GREETER_PERSPECTIVE (perspective)), TRUE);
+          gtk_widget_set_sensitive (GTK_WIDGET (IDE_GREETER_PERSPECTIVE (perspective)->titlebar), TRUE);
+        }

we can do better that is:

When calling ide_workbench_open_project_async, use user_data to transmit self (our perspective)

then now, in ide_greeter_perspective_open_project_cb you can cast user_data to IdeGreeterPerspective *self and (and not before), after gtk_window_present, that is aftter closing the dialog, you can call the gtk_widget_set_sensitive
Comment 6 Anoop Chandu 2016-12-25 14:43:15 UTC
Created attachment 342459 [details] [review]
greeter : Make greeter sensitive after an error

Made fixes.

IdeGreeterPerspective object is passed as user_data to ide_greeter_perspective_open_project_cb .In that function window is made sensitive again.
Comment 7 sébastien lafargue 2016-12-26 17:00:12 UTC
i have made your patch more robust so that we are sure the perspective will not vanish when the dialog is displayed.
Comment 8 sébastien lafargue 2016-12-26 17:01:45 UTC
Attachment 342459 [details] pushed as fd5258c - greeter : Make greeter sensitive after an error