greeter : Make greeter sensitive after an error

Make greeter perspective senstitive when an error occurs during opening
a project.

https://bugzilla.gnome.org/show_bug.cgi?id=771155